test/sema/struct_member_initialized_with_itself.dmz
// RUN: dmz %s -res-dump 2>&1 | filecheck %s
struct S {
  x: i32
}

fn main() -> void {
  let s = S { x: x };
  // CHECK: [[# @LINE - 1 ]]:18: error: symbol 'x' not found
}
